--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.41.2",
+    "react-hot-toast": "^2.4.0",
     "react-loader-spinner": "^5.3.4",
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
